--- a/pom.xml
+++ b/pom.xml
@@ -35,4 +35,8 @@
 			<version>5.3.2</version>
 		</dependency>
 	</dependencies>
+	<properties>
+     <maven.compiler.source>1.8</maven.compiler.source>
+     <maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
 </project>
