Added TestCase for Hovering on Phone Menu

--- a/src/test/resources/configfiles/locator.properties
+++ b/src/test/resources/configfiles/locator.properties
@@ -6,3 +6,10 @@ phone_number = //input[@placeholder='Phone Number']
 website = //input[@placeholder='Your Website']
 help_textbox = //textarea[@placeholder='How can we help you']
 submit = //input[@class='wpcf7-form-control has-spinner wpcf7-submit default-btn-next']
+phone_hover = //div[@class='coccoc-alo-ph-img-circle']//*[name()='svg']
+usa= //div[@class='wrapper-contact']//a[contains(text(),'+1 (718) 313-0706 (US)')]
+aus= //div[@class='wrapper-contact']//a[contains(text(),'+61 478 495 863 (AU)')]
+nl= //div[@class='wrapper-contact']//a[contains(text(),'+31 687 944 230 (NL)')]
+ind = //div[@class='wrapper-contact']//a[contains(text(),'+91 986 500 0760 (IN)')]
+drop_enquiry = //div[@class='wrapper-contact']//a[contains(text(),'drop inquiry.')]
+contact_form = //div[@id='expertConsultForm_header']//div[@class='modal-header d-block border-0 pl-0']
